--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: python
+
 python:
-  -"3.11"
+  - "3.10"
 
 install:
-  - pip install requests pytest
+  - pip install requests
 
 script:
-  - pytest -q test_triangle.py
+  - python -m unittest
   - python -m unittest discover -s GitHubApi567-hw3a -p "test*.py"
